# deepnet

./: .gitignore  README.txt
src/: CMakeLists.txt  ParallelUtils.cmake  backpropagation.cu  backpropagation.cuh  data_loader.cpp  data_loader.h  data_types.h  main.cpp  neural_network.cpp  neural_network.cu  neural_network.cuh  neural_network.h  utils.cpp  utils.cu  utils.cuh  utils.h
